2006-02-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/test_element.py:
	  add another link test

2006-01-30  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* gst/Makefile.am:
	Link against Gst Data protocol libraries.
	* gst/__init__.py:
	Restore dlopenflags after importing gst.
	Closes #329110

=== release 0.10.2 ===

2006-01-16  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.10.2, "And if the devil is six"

2006-01-13  Edward Hervey  <edward@fluendo.com>

	* gst/gstlibs.override:
	GstController : don't use values that are now in non-public API.

2006-01-09  Edward Hervey  <edward@fluendo.com>

	* gst/base.defs:
	Revert guint8* to gchar* modifications for the adapter
	* gst/gst.defs:
	Cleanups and API additions

2006-01-08  Martin Soto  <martinsoto@users.sourceforge.net>

	* gst/gststructure.override: (_wrap_gst_structure_set_value):
	Properly check for gstvalue data types. This makes it possible to
	set fields with fractions.
	* testsuite/test_caps.py:
	* testsuite/test_struct.py:
	Test for above modifications

2006-01-05  Edward Hervey  <edward@fluendo.com>

	* gst/base.defs:
	Use gchar* instead of guint8* for GstAdapter
	Added virtual methods definitions for base classes.
	Still have to override some functions, and figure
	out how to properly add reverse wrappers to the codegenerator.

2006-01-01  Edward Hervey  <edward@fluendo.com>

	First step at wrapping base elements in gst-python
	
	* configure.ac:
	Commenting out weird debugging statement dating from gst-python's
	and which causes problems with gstbasesrc.h anonymous union.
	* gst/Makefile.am:
	Added base.defs
	* gst/base.defs:
	New base elements definition files
	* gst/gst.defs:
	* gst/gst.override:
	Add base elements

=== release 0.10.1 ===

2005-12-23  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.10.1, "Krisimas Yakanaka"

2005-12-22  Thomas Vander Stichele  <thomas at apestaart dot org>
